# d3dgame

./: .gitmodules  CMakeLists.txt
src/: graphics.hpp  main.cpp  platform.cpp  platform.hpp  renderer.hpp  renderer_d3d11.cpp
src/engine/: app.cpp  app.hpp  common.hpp  graphics.hpp  platform.cpp  platform.hpp  renderer.hpp  renderer_d3d11.cpp
src/framework/: app.cpp  app.hpp  common.hpp  graphics.hpp  platform.cpp  platform.hpp  renderer_d3d11.cpp  renderer_opengl.cpp
src/shaders/: BatcherShader.frag.hlsl  BatcherShader.vert.hlsl  PixelShader.hlsl  VertexShader.hlsl  shaders.hlsl
